--- a/README
+++ b/README
@@ -1,4 +1,4 @@
 Scripts 
 
--> f.lux install : simple script to install the f.lux on your linux 
+-> f.lux install : simple script to install the f.lux ( http://stereopsis.com/flux/ )  on your linux 
 
